--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             <h1>Hello and Welcome!</h1>
             <h2>Here you can learn about interesting history from 1990 to 2020:</h2>
             <h3>
-              Thank you!
+              <a href="/aboutus">About us Page</a>
             </h3>
             <hr class="intro-divider">
           </div>
