--- a/templates/results.html
+++ b/templates/results.html
@@ -7,14 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>1990-2020/History</title>
   <!-- Custom CSS -->
-  <link href="static/style.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="static/css/History3.css?q={{ time }}" />
   <!-- Custom Fonts -->
   <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <h1>This is the year of {{ stone }} </h1>
+  <h1 class="center">This is the year of {{ stone }} </h1>
 </body>
 
 </html>
